--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -6,7 +6,7 @@
     background-color: rgba(0,0,0,0.5);
     position: fixed;
     min-width: 100vw;
-    min-height: 100vh;
+    min-height: 100%;
     top: 0;
     left: 0;
     justify-content: center;
